Code cleanup: Replace one-argument Arrays.asList() calls with Collections.singletonList()